<resources>
    <string name="app_name">Generosity Gateway</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LogIn</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="welcome_back">Welcome Back ;)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_number">Phone number</string>
    <string name="done">Done</string>
    <string name="username">Username</string>
    <string name="create_your_account">Create your account</string>
    <string name="Signup">Signup</string>
    <string name="spinner_prompt">Select an item</string>
    <string name="toggle_password_visibility" />

    <string-array name="Items">
        <item> Tissue roll</item>
        <item> Blanket</item>
        <item> Tinned fish</item>
        <item> Sanitary pads</item>
        <item> 2-Quire notebook</item>
        <item> Canned beef</item>
        <item> Toothpaste</item>
        <item> Maize meal</item>
        <item> Rice</item>
        <item> Backpack</item>
        <item> Bar soap</item>
        <item> Washing powder</item>
        <item> Cooking oil</item>
        <item> Deodorant</item>
    </string-array>

</resources>